--- a/drag.css
+++ b/drag.css
@@ -129,3 +129,7 @@ app-tab > p {
     color: #218a67;
     border-bottom: 1px solid;
 }
+img[class='btn'] {
+    cursor: pointer;
+    margin: 3px;
+}
