--- a/drag.css
+++ b/drag.css
@@ -13,6 +13,15 @@
 }
 [contenteditable] {
     width: 100%;
+    margin-left: 20px;
+    border: 1px solid #00000012;
+    padding: 0px 9px;
+    color: #000000d1;
+    font-size: 14px;
+}
+[contenteditable]:focus {
+    outline: unset;
+    border: unset;
 }
 [draggable] {
     cursor: pointer;
@@ -126,8 +135,10 @@ body {
     font-size: 12px;
 }
 app-tab > p {
-    color: #218a67;
-    border-bottom: 1px solid;
+    color: #7680e5e3;
+    border-bottom: 2px solid #a2a4b9e3;
+    font-size: 19px;
+    margin: 30px 0 0 0;
 }
 img[class='btn'] {
     cursor: pointer;
